--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
@@ -18,7 +19,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-multi-date-picker": "^4.5.2"
+    "react-multi-date-picker": "^4.5.2",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
