--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "@/connections/*":["./src/connections/*"],
       "@/models/*":["./src/models/*"],
       "@/providers/*":["./src/providers/*"],
+      "@/redux/*":["./src/redux/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
