--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-multi-date-picker": "^4.5.2",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "swr": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
