--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@next/font": "^14.2.15",
     "@reduxjs/toolkit": "^2.5.1",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.8.3",
@@ -16,6 +18,7 @@
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
