--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@next/font": "^14.2.15",
     "@reduxjs/toolkit": "^2.5.1",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
